[project]
name = "redmine_ballcourt"
version = "0.1.0"
description = "The ball's in your court! Which Redmine tickets are explicitly assigned to you?"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "python-redmine", "dynaconf", "jinja2" ]
authors = [
    { "name" = "Quentin Stafford-Fraser", "email" = "quentin@telemarq.com"}
]

[project.scripts]
redmine-ballcourt = "redmine_ballcourt:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redmine_ballcourt"]

